chore: upgrade AWS SDK
The Maven migration tool was run for most changes.
Additional manual changes were required.
I have attempted to reduce the PR size by avoiding a deeper refactor.

The AWS SDK no longer follows bean conventions so Mapstruct mappers needed to change.
Adding a custom Mapstruct naming strategy would have required more significant effort.
Modifying all Mapping annotations would have been too cumbersome.
As such, the existing generated mappers were copied and also migrated.
Remaining Mapstruct annotations are left in place for re-instating code generation.

TIS21-7431: upgrade aws sdk v1.x -> v2.x